BUG: 253165

Drop events are handled by the scene, which works in scene coordinates.  This was confusing the
GraphicsItems which work in their parent's coordinates.  Hence, meyhem.

This fix just converts the drop event back into parental coordinates in the viewitem.

I think this changed when d&d was being implemented to fix 258885.



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1188329 283d02a7-25f6-0310-bc7c-ecb5cbfe19da